--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,30 +1,20 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="flageolett.nicotimer">
+<manifest xmlns:android="http://schemas.android.com/apk/res/android" package="flageolett.nicotimer">
 
-    <application
-            android:name=".ApplicationState"
-            android:allowBackup="true"
-            android:icon="@mipmap/ic_launcher"
-            android:label="@string/app_name"
-            android:supportsRtl="true"
-            android:theme="@style/AppTheme">
-        <activity
-                android:name=".MainActivity"
-                android:label="@string/app_name">
+    <uses-permission android:name="android.permission.VIBRATE" />
+
+    <application android:name=".ApplicationState" android:allowBackup="true" android:icon="@mipmap/ic_launcher"
+        android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
+        <activity android:name=".MainActivity" android:label="@string/app_name">
             <intent-filter>
-                <action android:name="android.intent.action.MAIN"/>
+                <action android:name="android.intent.action.MAIN" />
 
-                <category android:name="android.intent.category.LAUNCHER"/>
+                <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
 
-        <service
-                android:name=".TimerService"
-                android:enabled="true"
-                android:exported="false">
-        </service>
-
+        <service android:name=".TimerService" android:enabled="true" android:exported="false" />
+        <receiver android:name=".IntentReceiver" />
     </application>
 
 </manifest>
