--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,7 +3,7 @@
 
     <uses-permission android:name="android.permission.VIBRATE" />
 
-    <application android:name=".ApplicationState" android:allowBackup="true" android:icon="@mipmap/ic_launcher"
+    <application android:allowBackup="true" android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name" android:supportsRtl="true" android:theme="@style/AppTheme">
         <activity android:name=".MainActivity" android:label="@string/app_name">
             <intent-filter>
